src/legends/modules/Home/components/CharacterSection/CharacterSection.module.scss
@import '@legends/styles/base.scss';

.error {
  margin-bottom: 1.5rem;
}

.wrapper {
  @include container;
  display: flex;
  position: relative;
  margin-bottom: 3rem;
  background: linear-gradient(
    147.96deg,
    $secondaryBackground 43.03%,
    rgba(19, 43, 37, 0.988) 87.21%
  );
  border-radius: 1rem;
  padding: 2.75rem 2.5rem 1.25rem 2.375rem;
  margin: 0 auto;
  margin-bottom: 8.5rem;

  .logoAndBalanceWrapper {
    display: inline-block;
    position: relative;
  }

  .logoWrapper {
    display: flex;
    justify-content: end;
    position: absolute;
    top: -12px;
    right: 0;
  }

  .characterInfo {
    position: relative;
    z-index: 2;

    .characterNameWrapper {
      margin-bottom: 3rem;
      display: flex;
      gap: 0.75rem;
    }

    .infoIcon {
      border: 1px solid $primaryText;
      width: 1.5rem;
      height: 1.5rem;
      border-radius: 50%;
      text-align: center;
      font-size: 1.2rem;
      align-self: flex-start;
      cursor: pointer;
    }
    .kicker {
      font-size: 2.5rem;
      font-weight: 500;
      color: $whiteText;
      margin-bottom: 6.5625rem;
    }

    .characterName {
      font-family: $secondaryFont;
      font-size: 4rem;
      line-height: 1.2;
      font-weight: 500;
      color: $primaryText;
      text-transform: capitalize;

      &.small {
        font-size: 3rem;
      }
    }

    .characterLevelInfoWrapper {
      display: flex;
      gap: 2.1875rem;
      align-items: flex-start;
      .characterItemWrapper {
        display: flex;

        .icon {
          margin-right: 1.5625rem;
        }
        .iconCoin {
          align-self: center;
        }

        .characterItem {
          display: flex;
          flex-direction: column;
          font-size: 0.875rem;
          font-weight: 400;
          line-height: 1.5rem;
          color: $secondaryText;
          align-self: end;
        }

        .levelWrapper {
          display: flex;
          flex-direction: column;

          .levelInfoTop {
            margin-bottom: 0.125rem;
          }

          .levelInfo {
            display: flex;
            justify-content: space-between;
            align-items: center;

            .level {
              color: $secondaryText;
              font-size: 1rem;
              font-weight: 500;
              line-height: 1.5rem;
              text-align: left;
            }
          }

          .xp {
            font-size: 1.5rem;
            font-weight: 500;
            line-height: 2.75rem;
            z-index: 2;
            color: $primaryText;
          }

          .levelProgress {
            flex: 1;
            padding: 0.125rem 0.3125rem;
            border-radius: $secondaryBorderRadius;
            background-color: rgba($tertiaryText, 0.3);
            overflow: hidden;
            position: relative;
            min-width: 11.25rem;
            text-align: center;
            font-size: 1rem;

            .levelProgressBarWrapper {
              display: flex;
              justify-content: space-between;
              .level {
                color: $whiteText;
                z-index: 3;
              }
            }

            .levelProgressBar {
              position: absolute;
              top: 0;
              left: 0;
              z-index: 1;
              height: 100%;
              background-color: $secondaryAccent;
              display: flex;
              align-items: center;
              justify-content: flex-end;
              white-space: nowrap;
              transition: width 0.3s ease;
            }
          }
        }
      }

      .item {
        min-width: 8.75rem;
        padding: 0.5rem 1.5rem;
        border-radius: $secondaryBorderRadius;
        background-color: $secondaryBackground;
        background-color: rgba($tertiaryText, 0.3);

        font-size: 1.5rem;
        font-weight: 500;
        line-height: 2.75rem;
        text-align: center;
        color: $primaryText;

        .itemTitleRow {
          display: flex;
          align-items: center;
          justify-content: space-between;

          .itemTitle {
            display: block;
            color: $secondaryText;
            font-family: $secondaryFont;
            font-size: 0.875rem;
            line-height: 1.25rem;
            margin-bottom: 0.5rem;
          }

          .progressText {
            font-size: 0.75rem;
            color: $secondaryText;
          }
        }
      }
    }

    .characterAbout {
      font-size: 1rem;
      color: $secondaryText;
      line-height: 1.5;
      margin-bottom: 0.5rem;
    }
  }

  .character {
    position: absolute;
    z-index: 0;
    right: 0rem;
    top: -4rem;

    .characterRelativeWrapper {
      position: relative;

      .characterImage {
        position: relative;
        z-index: 2;
        // width: 29.0625rem;
        // height: 34.4375rem;

        width: 18.75rem;
        height: 25.9375rem;

        width: 21.75rem;
        height: 28.9375rem;
        object-fit: contain;
      }
    }
  }

  .characterBlurEffect {
    position: absolute;
    width: 40.1875rem;
    height: 19.0625rem;
    top: 0;
    filter: blur(13.2px);
    background-position: 2rem -19rem;
    opacity: 0.1;
    background-size: 35.3125rem;
    background-repeat: no-repeat;
    right: 0;
    transform: scaleX(-1);
  }

  @include breakpoint-down-from(medium-desktop) {
    margin-left: 3rem;
    margin-right: 3rem;
    width: calc(100% - 6rem);
  }

  @include breakpoint-down-from(small-desktop) {
    padding-top: 1rem;

    .characterInfo {
      .characterName {
        font-size: 3rem;
      }

      .characterAbout {
        font-size: 0.875rem;
      }
    }

    .character {
      .characterRelativeWrapper {
        &::before {
          width: 18.75rem;
          height: 4.6875rem;
        }
      }

      .characterImage {
        width: 30rem;
        height: 30rem;
      }
    }
  }
}

